i think it is working now

--- a/app/views/calculations/square_root_form.html.erb
+++ b/app/views/calculations/square_root_form.html.erb
@@ -1,11 +1,11 @@
-<h1>  Square Calculations </h1>
+<h1>  Square Root Calculations </h1>
 
-<form action="/square/results">
+<form action="/square_root/results">
   <div>
     <label for="squarenum">
       Enter a number
     </label>
     <input id="squarenum" type="text" name="usr_num">
   </div>
-  <button> Calculate square </button>
+  <button> Calculate square root </button>
 </form>
