--- a/app/views/calculations/flexible_payment.html.erb
+++ b/app/views/calculations/flexible_payment.html.erb
@@ -1,3 +1,3 @@
 <h1> Flexible Payment </h1>
 
-<h3> A <%= @the_period %>year loan of <%=@the_principal %>, with an annual interest rate of <%= @the_interest/100 %> %, requires a monthly payment of <%=@the_payment %>. </h3>
+<h3> A <%= @the_period %>year loan of <%=@the_principal %>, with an annual interest rate of <%= @the_interest/100 %> %, requires a monthly payment of <%=number_to_currency(@the_payment.round(2)) %>. </h3>
