--- a/app/views/calculations/flexible_squareroot.html.erb
+++ b/app/views/calculations/flexible_squareroot.html.erb
@@ -1,3 +1,3 @@
 <h1> Flexible Square </h1>
 
-<h3> The square of <%= @the_number %> is <%=@the_number ** 0.5 %> </h3>
+<h3> The square of <%= @the_number %> is <%=(@the_number ** 0.5).round(2) %> </h3>
